export bastion login for users
